--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@tabler/icons-react": "^3.34.1",
     "apexcharts": "^5.3.3",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "gsap": "^3.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "minimal-shared": "^1.0.15",
     "mongoose": "^8.17.1",
@@ -27,10 +29,12 @@
     "react-dom": "19.1.0",
     "react-mui-sidebar": "^1.6.3",
     "swiper": "^11.2.10",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
