--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "gsap": "^3.13.0",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "minimal-shared": "^1.0.15",
@@ -39,7 +40,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.4.6", 
     "typescript": "^5"
   }
 }
